-Fixed the quote not able to wrap when adjusting the size

--- a/css/style.css
+++ b/css/style.css
@@ -152,4 +152,5 @@ img {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  flex-wrap: wrap;
 }
